--- a/pages/docs/validators/comment-tags.mdx
+++ b/pages/docs/validators/comment-tags.mdx
@@ -33,7 +33,7 @@ export interface TagExample {
      * 
      * Furthermore, you can use additional tags for each item.
      * 
-     * @type uint
+     * @type int
      * @format uuid
      */
     array: Array<string|number>;
@@ -58,7 +58,7 @@ export interface TagExample {
      * It must be one of integer or unsigned integer.
      * 
      * @type int
-     * @type uint
+     * @type int
      */
     type: number;
 
