--- a/pages/docs/validators/is.mdx
+++ b/pages/docs/validators/is.mdx
@@ -1,4 +1,6 @@
-import { Callout, Tabs, Tab } from 'nextra-theme-docs'
+import { Tabs, Tab } from 'nextra-theme-docs'
+import Alert from '@mui/material/Alert';
+import AlertTitle from '@mui/material/AlertTitle';
 
 ## `is()` function
 ```typescript filename="typia"
@@ -12,18 +14,24 @@ When you need to test an instance type, just call `typia.is<T>()` function.
 
 If the `input` value is following type `T`, `true` value would be returned. Otherwise, `false` would be returned.
 
-<Callout>
-> If you'd used other competitive validator libraries like `ajv` or `class-validator`, you may found that `typia` does not require any extra schema definition. If you have not experienced them, I can sure that you may get shocked after reading below extra schema definition files.
-> 
-> - `ajv` requires [JSON schema definition](https://github.com/samchon/typia/blob/master/test/schemas/json/swagger/ObjectHierarchical.json).
-> - `class-validator` requires [DTO class with decorator function calls](https://github.com/samchon/typia/blob/master/benchmark/structures/class-validator/ClassValidatorObjectHierarchical.ts).
->
-> Yeah, `typia` needs only pure TypeScript type. As `typia` is a compiler library, it can analyze TypeScript type by itself, and possible to write the optimal validation code like below. This is the secret of `typia`, which needs only one line with pure TypeScript type.
-</Callout>
+<br/>
+<Alert severity="success">
+    <AlertTitle> 
+        **AOT compliation** 
+    </AlertTitle>
+
+If you'd used other competitive validator libraries like `ajv` or `class-validator`, you may found that `typia` does not require any extra schema definition. If you have not experienced them, I can sure that you may get shocked after reading below extra schema definition files.
+
+ - `ajv` requires [JSON schema definition](https://github.com/samchon/typia/blob/master/test/schemas/json/swagger/ObjectHierarchical.json).
+ - `class-validator` requires [DTO class with decorator function calls](https://github.com/samchon/typia/blob/master/benchmark/structures/class-validator/ClassValidatorObjectHierarchical.ts).
+
+Yeah, `typia` needs only pure TypeScript type. As `typia` is a compiler library, it can analyze TypeScript type by itself, and possible to write the optimal validation code like below. This is the key principle of `typia`, which needs only one line with pure TypeScript type.
+
+</Alert>
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
     <Tab>
-```typescript filename="src/is.ts" showLineNumbers {4-8, 10}
+```typescript filename="examples/src/is.ts" showLineNumbers {4-8, 10}
 import typia from "typia";
 import { v4 } from "uuid";
 
@@ -47,6 +55,7 @@ interface IMember {
     email: string;
 
     /**
+     * @type int
      * @exclusiveMinimum 19
      * @maximum 100
      */
@@ -55,7 +64,7 @@ interface IMember {
 ```
     </Tab>
     <Tab>
-```javascript filename="bin/is.js" showLineNumbers {4-18, 20}
+```javascript filename="examples/bin/is.js" showLineNumbers {4-22, 24}
 import typia from "typia";
 import { v4 } from "uuid";
 
@@ -67,7 +76,11 @@ const matched = (input => {
         (
             "string" === typeof input.id && true === $is_uuid(input.id) && 
             ("string" === typeof input.email && $is_email(input.email)) && 
-            ("number" === typeof input.age && 19 < input.age && 100 >= input.age)
+            (
+                "number" === typeof input.age && 
+                parseInt(input.age) === input.age && 
+                19 < input.age && 100 >= input.age
+            )
         );
 })({
     id: (0, uuid_1.v4)(),
@@ -80,19 +93,6 @@ console.log(matched); // true
     </Tab>
 </Tabs>
 
-Also, `typia.is<T>()` function can be used for type casting.
-
-When target `input` value is following the type `T`, therefore `true` value be returned, `typia.is<T>()` function automatically casts the `input` value to the type `T`. Threfore, you can utilize the `typia.is<T>()` function for safe type casting tool like below:
-
-```typescript filename="src/is-cast.ts" showLineNumbers {6-7}
-const input: unknown = {
-    id: v4(),
-    email: "samchon.github@gmail.com",
-    age: 30,
-} as any;
-if (typia.is<IMember>(input)) // auto type casting
-    console.log(input.id, input.email, input.age);
-```
 
 
 
@@ -102,7 +102,7 @@ export function equals<T>(input: unknown): input is T;
 export function equals<T>(input: T): input is T;
 ```
 
-More strict tester prohibiting superfluous properties.
+More strict checker prohibiting superfluous properties.
 
 `typia.is<T>()` can test instance type, but it allows superfluous properties. 
 
@@ -110,7 +110,7 @@ If you want to prohibit those superfluous properties, you can use `typia.equals<
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
     <Tab>
-```typescript filename="src/equals.ts" showLineNumbers {11, 13}
+```typescript filename="examples/src/equals.ts" showLineNumbers {11, 13}
 import typia from "typia";
 import { v4 } from "uuid";
 
@@ -118,7 +118,7 @@ const input: unknown = {
     id: v4(),
     email: "samchon.github@gmail.com",
     age: 30,
-    extra: "superfluous property", // error
+    extra: "superfluous property", // extra
 };
 const is: boolean = typia.is<IMember>(input);
 const equals: boolean = typia.equals<IMember>(input);
@@ -137,6 +137,7 @@ interface IMember {
     email: string;
 
     /**
+     * @type int
      * @exclusiveMinimum 19
      * @maximum 100
      */
@@ -145,7 +146,7 @@ interface IMember {
 ```
     </Tab>
     <Tab>
-```javascript filename="bin/equals.js" showLineNumbers {22-38, 40}
+```javascript filename="examples/bin/equals.js" showLineNumbers {24-42, 44}
 import typia from "typia";
 import { v4 } from "uuid";
 
@@ -153,7 +154,7 @@ const input = {
     id: v4(),
     email: "samchon.github@gmail.com",
     age: 30,
-    extra: "superfluous property", // error
+    extra: "superfluous property", // extra
 };
 
 const is = ((input) => {
@@ -164,7 +165,9 @@ const is = ((input) => {
         null !== input &&
         "string" === typeof input.id && $is_uuid(input.id) &&
         "string" === typeof input.email && $is_email(input.email) &&
-        "number" === typeof input.age && 19 < input.age && 100 >= input.age
+        "number" === typeof input.age && 
+            parseInt(input.age) === input.age && 
+            19 < input.age && 100 >= input.age
     );
 })(input);
 const equals = ((input, _exceptionable = true) => {
@@ -173,7 +176,9 @@ const equals = ((input, _exceptionable = true) => {
     const $io0 = (input, _exceptionable = true) =>
         "string" === typeof input.id && $is_uuid(input.id) &&
         "string" === typeof input.email && $is_email(input.email) &&
-        "number" === typeof input.age && 19 < input.age && 100 >= input.age &&
+        "number" === typeof input.age && 
+            parseInt(input.age) === input.age && 
+            19 < input.age && 100 >= input.age
         (3 === Object.keys(input).length ||
             Object.keys(input).every((key) => {
                 if (["id", "email", "age"].some((prop) => key === prop))
@@ -198,11 +203,87 @@ console.log(is, equals); // true, false
 export function createIs<T>(): (input: unknown) => input is T;
 export function createEquals<T>(): (input: unknown) => input is T;
 ```
+Reusable `typia.is<T>()` function generators.
+
+If you repeat to call `typia.is<T>()` function on the same type, size of JavaScript files would be larger because of duplicated AOT compilation. To prevent it, you can generate reusable function through `typia.createIs<T>()` function.
+
+Just look at the code below, then you may understand how to use it.
+
+<Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
+    <Tab>
+```typescript filename="examples/src/createIs.ts" showLineNumbers {3}
+import typia from "typia";
+
+export const check = typia.createIs<IMember>();
+
+interface IMember {
+    /**
+     * @format uuid
+     */
+    id: string;
+
+    /**
+     * @format email
+     */
+    email: string;
+
+    /**
+     * @type int
+     * @exclusiveMinimum 19
+     * @maximum 100
+     */
+    age: number;
+}
+```
+    </Tab>
+    <Tab>
+```javascript filename="examples/bin/createIs.js" showLineNumbers {3-13}
+import typia from "typia";
+
+export const check = (input) => {
+    const $is_uuid = typia.createIs.is_uuid;
+    const $is_email = typia.createIs.is_email;
+    return (
+        "object" === typeof input && null !== input &&
+        "string" === typeof input.id && $is_uuid(input.id) &&
+        "string" === typeof input.email && $is_email(input.email) &&
+        "number" === typeof input.age && 
+            parseInt(input.age) === input.age && 
+            19 < input.age && 100 >= input.age
+    );
+};
+```
+    </Tab>
+</Tabs>
 
 
 
 
-## Benchmark
+
+## Auto Type Casting
+```typescript filename="typia"
+export function is<T>(input: unknown): input is T;
+export function equals<T>(input: unknown): input is T;
+export function createIs<T>(): (input: unknown) => input is T;
+export function createEquals<T>(): (input: unknown) => input is T;
+```
+
+`typia.is<T>()` function can be used for type casting.
+
+When target `input` value is following the type `T`, therefore `true` value be returned, `typia.is<T>()` function automatically casts the `input` value to the type `T`. Therefore, you can utilize the `typia.is<T>()` function for safe type casting tool like below:
+
+```typescript filename="examples/src/is-cast.ts" showLineNumbers {6-7}
+const input: unknown = {
+    id: v4(),
+    email: "samchon.github@gmail.com",
+    age: 30,
+} as any;
+if (typia.is<IMember>(input)) // auto type casting
+    console.log(input.id, input.email, input.age);
+```
+
+
+## Performance
 Super-fast and super-safe.
 
 Comparing `typia.is<T>()` function with other competitive libraries, maximum 20,000x faster. 
